--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
         <p>Disponible para residencia profesional</p>
     </footer>
 
+<div class="materia-section">
+        <a href="https://jesussoriano-dev.github.io/devitsao/info_materia.html" 
+           class="btn-materia" 
+           target="_self" 
+           title="Ver información completa de la materia">
+            VER FICHA DE LA MATERIA 
+            <span>DSH-2502</span>
+            
+        </a>
+    </div>
 </main>
 
 </body>
