--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </footer>
 
 <div class="materia-section">
-        <a href="https://jesussoriano-dev.github.io/devitsao/info_materia.html" 
+        <a href="https://anette-cloud.github.io/devitsao/info_materia.html" 
            class="btn-materia" 
            target="_self" 
            title="Ver información completa de la materia">
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
